Enabled Upcoming and fixed img in mods not completely occupying card.

--- a/pages/contactme.html
+++ b/pages/contactme.html
@@ -38,44 +38,44 @@
     <br>
     <br>
     <nav class="nav nav-pills nav-fill justify-content-center mb-5">
-        <a class="nav-link home" href="../index.html">Home</a>
-        <a class="nav-link mods" href="mods.html">My Mods</a>
-        <a class="nav-link vanillatweaks" href="../vanillatweaks/home.html">VanillaTweaks</a>
-        <a class="nav-link contact active" href="contactme.html">Contact</a>
+        <a class="nav-link" href="../index.html">Home</a>
+        <a class="nav-link" href="mods.html">My Mods</a>
+        <a class="nav-link" href="../vanillatweaks/home.html">VanillaTweaks</a>
+        <a class="nav-link active" href="contactme.html">Contact</a>
     </nav>
     <br>
     <br>
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <div class="card-deck">
-                    <div class="card" style="width: 18rem;">
+                <div class="card-deck justify-content-center">
+                    <div class="card">
                         <a href="https://www.twitter.com/strikerrocker">
-                            <img src="../assets/Twitter_Logo_WhiteOnBlue.png" class="card-img-top" alt="Twitter logo">
+                            <img src="../assets/Twitter_Logo_WhiteOnBlue.png" class="card-img-top contact" alt="Twitter logo">
                             <div class="card-body">
                                 <h5 class="card-title">My Twitter</h5>
                             </div>
                         </a>
                     </div>
-                    <div class="card" style="width: 18rem;">
+                    <div class="card">
                         <a href="https://discord.gg/tqcqeSj">
-                            <img src="../assets/Discord-Logo-Color.png" class="card-img-top" alt="Discord logo">
+                            <img src="../assets/Discord-Logo-Color.png" class="card-img-top contact" alt="Discord logo">
                             <div class="card-body">
                                 <h5 class="card-title">My Discord</h5>
                             </div>
                         </a>
                     </div>
-                    <div class="card" style="width: 18rem;">
+                    <div class="card">
                         <a href="https://www.github.com/strikerrocker">
-                            <img src="../assets/GitHub-Mark-32px.png" class="card-img-top" alt="github logo">
+                            <img src="../assets/GitHub-Mark-32px.png" class="card-img-top contact contact" alt="github logo">
                             <div class="card-body">
                                 <h5 class="card-title">My Github</h5>
                             </div>
                         </a>
                     </div>
-                    <div class="card" style="width: 18rem;">
+                    <div class="card">
                         <a href="https://minecraft.curseforge.com/members/strikerrocker">
-                            <img src="../assets/curse-vertical_lightbg.png" class="card-img-top" alt="CurseForge logo">
+                            <img src="../assets/curse-vertical_lightbg.png" class="card-img-top contact" alt="CurseForge logo">
                             <div class="card-body">
                                 <h5 class="card-title">CurseForge</h5>
                             </div>
