--- a/vanillatweaks/upcoming.html
+++ b/vanillatweaks/upcoming.html
@@ -41,51 +41,21 @@
         </div>
     </div>
     <nav class="nav nav-pills nav-fill justify-content-center mb-5">
-        <a class="nav-link home" href="home.html">Home</a>
-        <a class="nav-link crafting" href="crafting.html">Crafting</a>
-        <a class="nav-link enchanting" href="enchanting.html">Enchanting</a>
-        <a class="nav-link loot" href="loot.html">Loot</a>
-        <a class="nav-link world" href="world.html">World</a>
-        <a class="nav-link tweaks" href="tweaks.html">Tweaks</a>
-        <a class="nav-link upcoming active" href="upcoming.html">Upcoming</a>
+        <a class="nav-link" href="home.html">Home</a>
+        <a class="nav-link" href="crafting.html">Crafting</a>
+        <a class="nav-link" href="enchanting.html">Enchanting</a>
+        <a class="nav-link" href="loot.html">Loot</a>
+        <a class="nav-link" href="world.html">World</a>
+        <a class="nav-link" href="tweaks.html">Tweaks</a>
+        <a class="nav-link active" href="upcoming.html">Upcoming</a>
     </nav>
     <!--Features-->
     <!--Features-->
     <div class="container">
         <div class="row">
-            <div class="col-12">
-                <div class="card bg-light">
-                    <div class="card-body p-0">
-                        <div class="row no-gutters">
-                            <div class="image-region col-md-3">
-                                <!-- image -->
-                                <img src="" alt="Picture representing dynamite">
-                            </div>
-
-                            <div class="text-region col-md-9 p-4">
-                                <!-- title -->
-                                <a name="dynamite">
-                                    <h4>Dynamite</h4>
-                                </a>
-
-                                <div class="description">
-                                    <p>
-                                        Simple throwable TNT!
-                                    </p>
-                                </div>
-
-                                <!-- more link -->
-
-                                <a data-toggle="collapse" href="#more_dynamite" role="button" aria-expanded="false" aria-controls="more_">Show more</a>
-
-                                <div class="collapse" id="more_dynamite">
-                                    Adds a new item which can be right clicked to spawn a dynamite which explodes on contact with anything.
-                                </div>
-                                <!-- versions -->
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="col-12 text-center">
+                <p>In the near future, i would like to release 2.0 of VanillaTweaks. <br> 2.0 for now is mainly aimed at making everything configurable regardless of type of feature be it big or small.
+                </p>
             </div>
         </div>
     </div>
