--- a/vanillatweaks/world.html
+++ b/vanillatweaks/world.html
@@ -42,13 +42,13 @@
         </div>
     </div>
     <nav class="nav nav-pills nav-fill justify-content-center mb-5">
-        <a class="nav-link home" href="home.html">Home</a>
-        <a class="nav-link crafting" href="crafting.html">Crafting</a>
-        <a class="nav-link enchanting" href="enchanting.html">Enchanting</a>
-        <a class="nav-link loot" href="loot.html">Loot</a>
-        <a class="nav-link world active" href="world.html">World</a>
-        <a class="nav-link tweaks" href="tweaks.html">Tweaks</a>
-        <a class="nav-link upcoming disabled" href="upcoming.html">Upcoming</a>
+        <a class="nav-link" href="home.html">Home</a>
+        <a class="nav-link" href="crafting.html">Crafting</a>
+        <a class="nav-link" href="enchanting.html">Enchanting</a>
+        <a class="nav-link" href="loot.html">Loot</a>
+        <a class="nav-link active" href="world.html">World</a>
+        <a class="nav-link" href="tweaks.html">Tweaks</a>
+        <a class="nav-link" href="upcoming.html">Upcoming</a>
     </nav>
     <!--Features-->
     <div class="container">
