Fixed pill colour not working for upcoming.

--- a/vanillatweaks/home.html
+++ b/vanillatweaks/home.html
@@ -48,7 +48,7 @@
         <a class="nav-link" href="loot.html">Loot</a>
         <a class="nav-link" href="world.html">World</a>
         <a class="nav-link" href="tweaks.html">Tweaks</a>
-        <a class="nav-link" href="upcoming.html">Upcoming</a>
+        <a class="nav-link upcoming" href="upcoming.html">Upcoming</a>
     </nav>
     <br>
     <br>
