--- a/vanillatweaks/upcoming.html
+++ b/vanillatweaks/upcoming.html
@@ -47,7 +47,7 @@
         <a class="nav-link" href="loot.html">Loot</a>
         <a class="nav-link" href="world.html">World</a>
         <a class="nav-link" href="tweaks.html">Tweaks</a>
-        <a class="nav-link active" href="upcoming.html">Upcoming</a>
+        <a class="nav-link upcoming active" href="upcoming.html">Upcoming</a>
     </nav>
     <!--Features-->
     <!--Features-->
