Migrate VT url from explicitely using file format.

--- a/pages/contactme.html
+++ b/pages/contactme.html
@@ -40,7 +40,7 @@
     <nav class="nav nav-pills nav-fill justify-content-center mb-5">
         <a class="nav-link" href="../index.html">Home</a>
         <a class="nav-link" href="mods.html">My Mods</a>
-        <a class="nav-link" href="../vanillatweaks/home.html">VanillaTweaks</a>
+        <a class="nav-link" href="../vanillatweaks/index.html">VanillaTweaks</a>
         <a class="nav-link active" href="contactme.html">Contact</a>
     </nav>
     <br>
