--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <nav class="nav nav-pills nav-fill justify-content-center mb-5">
         <a class="nav-link home active" href="index.html">Home</a>
         <a class="nav-link mods" href="pages/mods.html">My Mods</a>
-        <a class="nav-link vanillatweaks" href="vanillatweaks/home.html">VanillaTweaks</a>
+        <a class="nav-link vanillatweaks" href="vanillatweaks/index.html">VanillaTweaks</a>
         <a class="nav-link contact" href="pages/contactme.html">Contact</a>
     </nav>
     <br>
