--- a/vanillatweaks/index.html
+++ b/vanillatweaks/index.html
@@ -64,7 +64,7 @@
                 <p>
                     VanillaTweaks is extremely configurable. Everything from enabling and disabling enchantments to hoe as sickle can be configured straight from the config GUI, accessible from the mods menu or the game menu. It is advised to delete your config file every
                     time you update Vanilla Tweaks, for the configuration options may have changed.
-                </p>`
+                </p>
                 <p>
                     I hope you enjoy playing this mod as much as I have enjoyed learning about modding and building it!
                 </p>
@@ -91,15 +91,12 @@
                 <h3>Links</h3>
                 <ul>
                     <li>
-                        <a href="https://minecraft.curseforge.com/projects/vanillatweaks">Curseforge</a>
+                        <a href="https://minecraft.curseforge.com/projects/vanillatweaks">CurseForge</a>
                     </li>
                     <li><a href="https://github.com/StrikerRockers-Mods/VanillaTweaks/">Source code on github</a></li>
+                    <li><a href="../contactme.html">Contact</a></li>
                 </ul>
                 <br><br><br>
-                <h3>Contact</h3>
-                <ul>
-                    <li><a href="../contactme.html">contact</a></li>
-                </ul>
                 <script>
                     loadHomeString();
                 </script>
