Move scripts to the bottom of the site,updated sitemap,use proper keywords,fix GitHub card title,move getting curse data to a seperate script, update upcoming.

--- a/pages/contactme.html
+++ b/pages/contactme.html
@@ -7,7 +7,7 @@
 
     <!--Meta properties-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="Minecraft,Mods,VanillaTweaks,strikerrocker,Forge,Fabric, Mod Packs">
+    <meta name="keywords" content="StrikerRocker,Contacts">
     <meta name="author" content="StrikerRocker">
     <meta property="og:title" content="Contacts">
     <meta property="og:type" content="website">
@@ -27,10 +27,6 @@
     </script>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
     <link href="../styles/default.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -69,7 +65,7 @@
                         <a href="https://www.github.com/strikerrocker">
                             <img src="../assets/GitHub-Mark-32px.png" class="card-img-top contact contact" alt="github logo">
                             <div class="card-body">
-                                <h5 class="card-title">My Github</h5>
+                                <h5 class="card-title">My GitHub</h5>
                             </div>
                         </a>
                     </div>
@@ -85,6 +81,9 @@
             </div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 
 </html>
