--- a/pages/mods.html
+++ b/pages/mods.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <!--Meta properties-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="Minecraft,Mods,VanillaTweaks,strikerrocker,Forge,Fabric, Mod Packs">
+    <meta name="keywords" content="Minecraft,Mods,VanillaTweaks,StrikerRocker,Forge,Fabric">
     <meta name="author" content="StrikerRocker">
     <meta property="og:title" content="My Mods">
     <meta property="og:type" content="website">
@@ -24,12 +24,7 @@
 
         gtag('config', 'UA-109233842-2');
     </script>
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
     <link href="../styles/default.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -47,6 +42,7 @@
             <div class="col-12">
                 <h1 id="title">My Mods</h1>
                 <h3>Mods for <strong>forge</strong></h3>
+
                 <div class="card-deck justify-content-center">
                     <div class="card element" id="vanillatweaks" api="https://api.cfwidget.com/mc-mods/minecraft/vanillatweaks">
                         <a class="element_link" href="">
@@ -57,9 +53,7 @@
                             </div>
                         </a>
                     </div>
-
-                    <div class="card element
-                    " id="tweakoni" api="https://api.cfwidget.com/minecraft/mc-mods/tweakoni">
+                    <div class="card element" id="tweakoni" api="https://api.cfwidget.com/minecraft/mc-mods/tweakoni">
                         <a class="element_link" href="">
                             <img src="" class="card-img-top element_img" alt="No Connection to CF API">
                             <div class="card-body">
@@ -118,43 +112,10 @@
         </div>
     </div>
     <!--Script for pulling img from curse-->
-    <script>
-        Array.from(document.getElementsByClassName("element")).forEach(getDataForElement);
-
-        function getDataForElement(element, index, array) {
-            var id = element.id;
-            if (id != "") {
-                httpGetAsync(element, element.getAttribute("api"), fillInfoForResponse);
-            }
-        }
-
-        function httpGetAsync(element, theUrl, callback) {
-            var xmlHttp = new XMLHttpRequest();
-            xmlHttp.onreadystatechange = function() {
-                if (xmlHttp.readyState == 4 && xmlHttp.status == 200)
-                    callback(element, xmlHttp.responseText);
-            }
-            xmlHttp.open("GET", theUrl, true);
-            xmlHttp.send(null);
-        }
-
-        function fillInfoForResponse(element, response) {
-            console.log(response);
-            var downloads = document.querySelectorAll("div#" + element.id + " .element_downloads");
-            var title = document.querySelectorAll("div#" + element.id + " .element_text");
-            var link = document.querySelectorAll("div#" + element.id + " .element_link");
-            var img = document.querySelectorAll("div#" + element.id + " .element_img");
-            var obj = JSON.parse(response);
-            downloads[0].innerHTML = numberWithCommas(obj.downloads.total) + " Downloads";
-            title[0].innerHTML = obj.title;
-            link[0].setAttribute("href", obj.urls.curseforge);
-            img[0].setAttribute("src", obj.thumbnail.replace("120/120/", "").replace("thumbnails/", ""));
-        }
-
-        function numberWithCommas(x) {
-            return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
-        }
-    </script>
+    <script src="../scripts/curseData.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 
 </html>
