--- a/vanillatweaks/index.html
+++ b/vanillatweaks/index.html
@@ -43,11 +43,11 @@
     <nav class="nav nav-pills nav-fill justify-content-center mb-5">
         <a class="nav-link active" id="home" onclick="setupPill(this)">Home</a>
         <a class="nav-link" id="crafting" onclick="setupPill(this)">Crafting</a>
+        <a class="nav-link" id="content" onclick="setupPill(this)">Content</a>
         <a class="nav-link" id="enchanting" onclick="setupPill(this)">Enchanting</a>
         <a class="nav-link" id="loot" onclick="setupPill(this)">Loot</a>
         <a class="nav-link" id="world" onclick="setupPill(this)">World</a>
         <a class="nav-link" id="tweaks" onclick="setupPill(this)">Tweaks</a>
-        <a class="nav-link upcoming" id="upcoming" onclick="setupPill(this)">Upcoming</a>
     </nav>
     <br>
     <br>
