Update mods and home page. Added hover effects to cards.

--- a/vanillatweaks/index.html
+++ b/vanillatweaks/index.html
@@ -75,7 +75,7 @@
                 <h3>How to install</h3>
                 <ol>
                     <li>
-                        VanillaTweaks requires Minecraft 1.12 with forge. Download the forge install from <a href="http://files.minecraftforge.net/">here</a> and run it.
+                        VanillaTweaks requires Minecraft 1.12 or 1.14 with forge. Download the forge install from <a href="http://files.minecraftforge.net/">here</a> and run it.
                     </li>
                     <li>
                         Download the latest version of VanillaTweaks from curseforge.com and put the .jar file in your mods folder. This normally lives in the same folder as your resourcepacks folder.
