--- a/index.html
+++ b/index.html
@@ -35,26 +35,93 @@
         <a class="nav-link home active" href="index.html">Home</a>
         <a class="nav-link mods" href="pages/mods.html">My Mods</a>
         <a class="nav-link vanillatweaks" href="vanillatweaks/index.html">VanillaTweaks</a>
-        <a class="nav-link contact" href="pages/contactme.html">Contact</a>
     </nav>
-    <br>
     <br>
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <p>I'm a young developer currently learning software development through indie game and addon development. Primarily focused on making mods for the game <a href="http://minecraft.net/">
-                    Minecraft</a>. Some of which can be seen <a href="pages/mods.html">here </a></p>
-                <p>I have made about 5-6 mods on my own and ported mods.</p>
-                <p>The mod i am most proud of is <a href="https://minecraft.curseforge.com/projects/VanillaTweaks">VanillaTweaks</a> was initially a unofficial port of a mod called
-                    <a href="https://minecraft.curseforge.com/projects/craft-by-anon10w1z">Craft++</a> and I started adding more into it.</p>
-                <p>I am learning/trying to make a 2D game for starters in java. Checkout how its coming along
-                    <a href="http://github.com/strikerrocker/2D-game">here</a></p>
+                <div class="rightbar" style="margin:10px;margin-left:0;width:20%;float:right;">
+                    <a class="twitter-timeline" data-width="300" data-height="317" data-theme="light" href="https://twitter.com/StrikerRocker?ref_src=twsrc%5Etfw">Tweets by StrikerRocker</a>
+                    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    <iframe style="margin-top:10px;" src="https://discordapp.com/widget?id=325065492899299328&theme=light" width="100%" height="400" allowtransparency="true" frameborder="0"></iframe>
+                </div>
+                <main>
+                    <section>
+                        <h2>About StrikerRocker</h2>
+                        <br>
+                        <p>I'm a young developer currently learning software development through indie game and addon development.
+                    </section>
+                    <hr>
+                    <section>
+                        <h2>Commissions</h2>
+                        <br>
+                        <p>
+                            I sometimes do modding commissions (this is highly dependent on the case) contact me if you're interested.
+                        </p>
+                    </section>
+                    <hr>
+                    <section>
+                        <h2>Projects</h2>
+                        <br>
+                        <p>
+                            Primarily focused on making mods for the game <a href="http://minecraft.net/">
+                                Minecraft</a>. Which can be seen <a href="pages/mods.html">here </a> </p>
+                        </p>
+                    </section>
+                    <hr>
+                    <section>
+                        <h2>Links</h2>
+                        <br>
+                        <div class="card-deck justify-content-center">
+                            <div class="card element">
+                                <a href="https://www.twitter.com/strikerrocker">
+                                    <img src="assets/Twitter_Logo_WhiteOnBlue.png" class="card-img-top contact" alt="Twitter logo">
+                                    <div class="card-body">
+                                        <p class="card-title">Twitter - strikerrocker</p>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="card element">
+                                <a href="https://discord.gg/tqcqeSj">
+                                    <img src="assets/Discord-Logo-Color.png" class="card-img-top contact" alt="Discord logo">
+                                    <div class="card-body">
+                                        <p class="card-title">Discord - StrikerRocker#7058</p>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="card element">
+                                <a href="https://www.github.com/strikerrocker">
+                                    <img src="assets/GitHub-Mark-32px.png" class="card-img-top contact contact" alt="github logo">
+                                    <div class="card-body">
+                                        <p class="card-title">Github - strikerrocker</p>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="card element">
+                                <a href="https://www.curseforge.com/members/strikerrocker/projects">
+                                    <img src="assets/curse-vertical_lightbg.png" class="card-img-top contact" alt="CurseForge logo">
+                                    <div class="card-body">
+                                        <p class="card-title">CurseForge - strikerrocker</p>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="card element">
+                                <a href="https://www.twitch.tv/strikerrocker/">
+                                    <img src="assets/twitch.png" class="card-img-top contact" alt="CurseForge logo">
+                                    <div class="card-body">
+                                        <p class="card-title">CurseForge - strikerrocker</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </section>
+                </main>
             </div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 </html>
